* process.c (READ_FROM_CHILD): Apply the last hunk of   0001-process.c-avoid-EINTR-from-Process.spawn.patch written by   Eric Wong in [Bug #8770].

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@44727 b2dd03c8-39d4-4d8f-98ff-823fe69b080e